# HPDA_Project

./: .dockerignore  .gitignore  README.md  d3block_test_output.html  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt
ai_usage/henrik_klasen/: chat20260510192915.html  chat20260510193721.html  chat20260510193721.md
backend/: Cargo.toml  building_translator.py  buildings.json  d3js.py  d3js_v2.py  d3js_v3.py  databsae.py  employee_data_aggregator.py  employer_data_extract.py  employer_health_summary.json  job_changes.json  job_changes_1.json  job_changes_10.json  job_changes_11.json  job_changes_12.json  job_changes_13.json  job_changes_14.json  job_changes_15.json  job_changes_16.json  job_changes_17.json  job_changes_18.json  job_changes_19.json  job_changes_2.json  job_changes_20.json  job_changes_21.json  job_changes_22.json  job_changes_23.json  job_changes_24.json  job_changes_25.json  job_changes_26.json  job_changes_27.json  job_changes_28.json  job_changes_29.json  job_changes_3.json  job_changes_30.json  job_changes_4.json  job_changes_5.json  job_changes_6.json  job_changes_7.json  job_changes_8.json  (+4 more)
backend/src/: main.rs
chatLogs/: chat20260510192915.md  chat20260510192954.html  chat20260510192954.md
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: index.html
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Graph.jsx  Home.jsx
generate_csv/: Cargo.toml
generate_csv/src/: main.rs
src/: App.jsx  Home.jsx  main.jsx
(+49 files in other folders)
