[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
polars = { version = "0.53.0", features = ["lazy", "csv", "serde", "serde-lazy", "parquet", "new_streaming", "polars-io", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"