[package]
name = "generate_csv"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", features = ["formatting", "macros", "parsing", "serde"] }
